<resources>
    <string name="app_name">CheQ</string>
    <string name="loginMsg">Please enter your mobile number to begin</string>
    <string name="pwMsg">Please enter your password</string>
    <string name="registerPrompt">Please fill in the following to proceed</string>
    <string name="otpPrompt">Please enter the OTP sent to</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_activities_title">Activities</string>
    <string name="nav_account_title">Account</string>
    <string name="view_all_outlets">View All Outlets</string>
    <string name="no_search_results">No results match your search.</string>
    <string name="place_order_btn">Place Order</string>
    <string name="order_placed">Order Placed</string>
    <string name="add_dish_popup_title">Add Item to Basket?</string>
    <string name="dish_popup_default">Dish Name</string>
    <string name="add_dish_btn">Add Dish</string>
    <string name="view_basket">View My Basket</string>
    <string name="order_confirm">Order Confirmation</string>
    <string name="swipe_delete">Swipe to delete a dish item.</string>
    <string name="no_items_basket">You have no items in your basket. Head back to the Menu tab to browse the menu.</string>
    <string name="cancel_btn">Cancel</string>
    <string name="no_current_queue">You have no Current Queue</string>
    <string name="no_past_activities">You have no Past Activities</string>
    <string name="leave_queue_msg">Please note that your queue number and pre-order will be erased.</string>
    <string name="leave_queue_msg2">Are you sure you want to leave?</string>
    <string name="leave_queue_title">Confirm Leave Queue?</string>
    <string-array name="restaurant_names">
        <item>gomgom</item>
        <item>Crooked Cooks</item>
    </string-array>
    <string-array name="categories">
        <item>Cafe</item>
        <item>Japanese</item>
        <item>Fast Food</item>
        <item>Western</item>
        <item>Chinese</item>
    </string-array>
    <string-array name="dish_categories">
        <item>Main</item>
        <item>Beverage</item>
        <item>Dessert</item>
        <item>Appetiser</item>
    </string-array>
    <string name="category_hint">Category</string>
    <string name="tab_text_1">Current</string>
    <string name="tab_text_2">Past</string>
    <string-array name="past_activities">
        <item>Din Tai Fung</item>
        <item>Crooked Crooks</item>
        <item>These are</item>
        <item>Just to</item>
        <item>Test</item>
        <item>Recycle</item>
        <item>View</item>
        <item>Is</item>
        <item>Working</item>
        <item>Or</item>
        <item>Not</item>
    </string-array>
    <string-array name="past_activities_date">
        <item>12 Sep 2020, Saturday</item>
        <item>11 Sep 2020, Saturday</item>
        <item>10 Sep 2020, Saturday</item>
        <item>9 Sep 2020, Saturday</item>
        <item>8 Sep 2020, Saturday</item>
        <item>7 Sep 2020, Saturday</item>
        <item>6 Sep 2020, Saturday</item>
        <item>5 Sep 2020, Saturday</item>
        <item>4 Sep 2020, Saturday</item>
        <item>3 Sep 2020, Saturday</item>
        <item>2 Sep 2020, Saturday</item>
    </string-array>
    <string-array name="past_activities_groupsize">
        <item>2 people</item>
        <item>3 people</item>
        <item>4 people</item>
        <item>1 person</item>
        <item>4 people</item>
        <item>4 people</item>
        <item>4 people</item>
        <item>4 people</item>
        <item>4 people</item>
        <item>4 people</item>
        <item>4 people</item>
    </string-array>

    <!-- Rest Info -->
    <string name="rest_name">Crooked Cooks</string>
    <string name="rest_description">Takeout, Japanese</string>
    <string name="avg_waiting_time">Average Waiting Time:</string>
    <string name="default_wait_time">20 mins</string>
    <string name="queue_tab">Queues</string>
    <string name="menu_tab">Menu</string>
    <string name="join_queue">Join Queue</string>
    <string name="rest_image_content">Restaurant</string>
    <string name="join_rest">Join Queue for Crooked Cooks?</string>
    <string name="table_no">Table for:</string>
    <string name="one_pax_info"> 1 PAX \n No. of Groups \n Waiting: \n Estimated \n Waiting Time:</string>
    <string name="two_pax_info"> 2 PAX \n No. of Groups \n Waiting: \n Estimated \n Waiting Time:</string>
    <string name="three_pax_info"> 3 PAX \n No. of Groups \n Waiting: \n Estimated \n Waiting Time:</string>
    <string name="four_pax_info"> 4 PAX \n No. of Groups \n Waiting: \n Estimated \n Waiting Time:</string>
    <string name="five_pax_info"> 5 PAX \n No. of Groups \n Waiting: \n Estimated \n Waiting Time:</string>
    <string name="six_pax_info"> 6 PAX \n No. of Groups \n Waiting: \n Estimated \n Waiting Time:</string>
    <string name="pop_up_info">You will receive a notification when it is your turn. Please arrive at the restaurant within 10 mins.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rest_image_prompt">Choose a profile image</string>
    <string name="onboard_menu_msg">Add your menu!</string>
</resources>