<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".RestaurantInfo.RestaurantInfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:theme="@style/AppTheme">

        <ImageView
            android:id="@+id/restImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/crookedcooks" />

        <TextView
            android:id="@+id/title"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/restImage"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/rest_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="125dp"
            android:layout_height="45dp"
            android:layout_marginTop="-30dp"
            android:gravity="center"
            android:padding="@dimen/appbar_padding"
            android:text="@string/rest_description"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="@color/colorGrey"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/waitingTime"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginTop="-25dp"
            android:gravity="center"
            android:padding="@dimen/appbar_padding"
            android:text="@string/avg_waiting_time"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="@color/colorGrey"
            android:textSize="12sp" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:translationZ="90dp">

        <Button
            android:id="@+id/joinQueueButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/fab_margin"
            android:background="@drawable/join_queue_button"
            android:onClick="onButtonShowPopupWindowClick"
            android:text="@string/join_queue"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="411dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="236dp" />
    </androidx.viewpager.widget.ViewPager>

</androidx.coordinatorlayout.widget.CoordinatorLayout>