<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.RestaurantOnboard.RestaurantOnboardingActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimaryDark"
    android:padding="50dp">

    <ImageView
        android:id="@+id/onboardBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:src="@drawable/arrow_back"
        app:tint="@color/colorPrimary"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/onboardMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/onboardBackBtn"
        android:text="We need some details!"
        android:textColor="@android:color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        />

    <TextView
        android:id="@+id/onboardPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/onboardMsg"
        android:layout_marginTop="10dp"
        android:text="@string/registerPrompt"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/onboardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/onboardPrompt"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/onboardResturantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/curvedcornertop"
            android:hint="Restaurant Name"
            android:inputType="text"
            android:padding="15dp"
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey"/>

        <EditText
            android:id="@+id/onboardResturantNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:hint="Restaurant Number"
            android:inputType="number"
            android:padding="15dp"
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey"/>

        <EditText
            android:id="@+id/onboardResturantEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:hint="Restaurant Email"
            android:inputType="text"
            android:padding="15dp"
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <Spinner
                android:id="@+id/onboardSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/categories"
                android:spinnerMode="dialog"
                android:prompt="@string/category_hint"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="15dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey" />

        <TextView
            android:id="@+id/chooseRestaurantPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curvedcornerbtm"
            android:hint="@string/rest_image_prompt"
            android:padding="15dp"
            android:textSize="15dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/onboardContinueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/onboardLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="Continue"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:transitionName="transitionContinueBtn"/>

    <RelativeLayout
        android:id="@+id/onboardProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/white_circle"
            android:padding="15dp"
            android:elevation="10dp"/>
    </RelativeLayout>

</RelativeLayout>